# tomat

./: .codecov.yml  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  build.rs  deny.toml  devenv.nix  flake.nix  install.sh  tomat.service
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: build-and-test.yml  build-binaries.yml  coverage.yml  docs.yml  release.yml  update-aur.yml
assets/: tomat.service
docs/: book.toml  configuration.md  development.md  index.md  integration.md  troubleshooting.md
docs/doc-utils/: Cargo.toml
docs/doc-utils/src/: main.rs
docs/src/: SUMMARY.md  cli-reference.md  configuration.md  getting_started.md  index.md  integration.md  overview.md  troubleshooting.md
docs/src/configuration/: display.md  hooks.md  index.md  notification.md  sound.md  timer.md
docs/src/doc-utils/: Cargo.toml
docs/src/doc-utils/src/: lib.rs  main.rs
docs/src/guide/: configuration.md  getting_started.md  installation.md  integration.md  troubleshooting.md
docs/src/guide/integration/: index.md  notifications.md  service-management.md
docs/src/guide/integration/status-bars/: i3blocks.md  i3status-rust.md  i3status.md  index.md  polybar.md  waybar.md
docs/src/guide/troubleshooting/: audio.md  configuration.md  daemon.md  hooks.md  index.md  installation.md  notifications.md  service-management.md  status-bars.md
examples/: README.md  config.toml  i3status-rust-config.toml  systemd-integration.md  systemd.service  waybar-config.json  waybar-style.css  xdg-directory-support.md
src/: audio.rs  cli.rs  config.rs  main.rs  server.rs  timer.rs
tests/: cli.rs
tests/integration/: commands.rs  common.rs  daemon.rs  formats.rs  hooks.rs  mod.rs  timer.rs
