[package]
name = "tomat"
version = "0.1.0"
edition = "2024"
description = "A Pomodoro timer with daemon support for waybar and other status bars"
license = "MIT"
repository = "https://github.com/jolars/tomat"
readme = "README.md"
keywords = ["pomodoro", "timer", "waybar", "productivity", "daemon"]
categories = ["command-line-utilities"]
authors = ["Johan Larsson <johan@jolars.co>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
libc = "0.2"
notify-rust = "4.11"
toml = "0.9"
fs2 = "0.4"
rodio = { version = "0.20", optional = true }

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dev-dependencies]
tempfile = "3.23"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
serde_json = "1.0"
resvg = "0.44"
