[package]
name = "tomat"
version = "2.8.0"
edition = "2024"
description = "A Pomodoro timer with daemon support for waybar and other status bars"
license = "MIT"
repository = "https://github.com/jolars/tomat"
readme = "README.md"
keywords = ["pomodoro", "timer", "waybar", "productivity", "daemon"]
categories = ["command-line-utilities"]
authors = ["Johan Larsson <johan@jolars.co>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
libc = "0.2"
notify-rust = "4.11"
toml = "0.9"
fs2 = "0.4"
rodio = { version = "0.21", optional = true }

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dev-dependencies]
tempfile = "3.24"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
clap-markdown = "0.1"
serde_json = "1.0"
resvg = "0.46"
clap_complete = "4.5"

[package.metadata.deb]
maintainer = "Johan Larsson <johan@jolars.co>"
copyright = "2026, Johan Larsson <johan@jolars.co>"
license-file = ["LICENSE", "4"]
extended-description = """\
A lightweight Pomodoro timer with daemon support designed for waybar and other \
status bars. Features configurable work/break/long-break sessions, desktop \
notifications, audio alerts, and multiple output formats."""
depends = "$auto, libasound2"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/tomat",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/tomat/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/tomat/",
        "644",
    ],
    [
        "examples/systemd.service",
        "usr/lib/systemd/user/tomat.service",
        "644",
    ],
]
maintainer-scripts = "debian/"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tomat", dest = "/usr/bin/tomat", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/tomat/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/tomat/LICENSE", mode = "644", doc = true },
    { source = "examples/systemd.service", dest = "/usr/lib/systemd/user/tomat.service", mode = "644" },
]
