[package]
name = "tomat"
version = "2.8.0"
edition = "2024"
description = "A Pomodoro timer with daemon support for waybar and other status bars"
license = "MIT"
repository = "https://github.com/jolars/tomat"
readme = "README.md"
keywords = ["pomodoro", "timer", "waybar", "productivity", "daemon"]
categories = ["command-line-utilities"]
authors = ["Johan Larsson <johan@jolars.co>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
libc = "0.2"
notify-rust = "4.11"
toml = "0.9"
fs2 = "0.4"
rodio = { version = "0.21", optional = true }

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dev-dependencies]
tempfile = "3.24"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
clap-markdown = "0.1"
serde_json = "1.0"
resvg = "0.46"
clap_complete = "4.5"

[package.metadata.deb]
maintainer = "Johan Larsson <johan@jolars.co>"
copyright = "2026, Johan Larsson <johan@jolars.co>"
license-file = ["LICENSE", "4"]
extended-description = """\
A lightweight Pomodoro timer with daemon support designed for waybar and other \
status bars. Features configurable work/break/long-break sessions, desktop \
notifications, audio alerts, and multiple output formats."""
depends = "$auto, libasound2"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/tomat",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/tomat/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/tomat/",
        "644",
    ],
    [
        "target/man/*.1",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "target/completions/tomat.bash",
        "usr/share/bash-completion/completions/tomat",
        "644",
    ],
    [
        "target/completions/tomat.fish",
        "usr/share/fish/vendor_completions.d/tomat.fish",
        "644",
    ],
    [
        "target/completions/_tomat",
        "usr/share/zsh/vendor-completions/_tomat",
        "644",
    ],
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "tomat", unit-scripts = "examples/", enable = false }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tomat", dest = "/usr/bin/tomat", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/tomat/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/tomat/LICENSE", mode = "644", doc = true },
    { source = "examples/systemd.service", dest = "/usr/lib/systemd/user/tomat.service", mode = "644" },
    { source = "target/man/*.1", dest = "/usr/share/man/man1/", mode = "644" },
    { source = "target/completions/tomat.bash", dest = "/usr/share/bash-completion/completions/tomat", mode = "644" },
    { source = "target/completions/tomat.fish", dest = "/usr/share/fish/vendor_completions.d/tomat.fish", mode = "644" },
    { source = "target/completions/_tomat", dest = "/usr/share/zsh/vendor-completions/_tomat", mode = "644" },
]

[package.metadata.generate-rpm.requires]
libasound2 = "*"

post_install_script = """
if [ $1 -eq 1 ]; then
    # Initial installation
    systemctl --global daemon-reload >/dev/null 2>&1 || :
fi
"""

post_uninstall_script = """
if [ $1 -eq 0 ]; then
    # Package removal
    systemctl --global daemon-reload >/dev/null 2>&1 || :
fi
"""
